--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "lint": "npx eslint src --ignore-pattern '.js,.ts'",
     "lint:fix": "npx eslint src --fix",
-    "format": "npx prettier --ignore-path .prettierignore --write \"**/*.{js,ts,json}\"",
+    "prettier": "npx prettier --ignore-path .prettierignore --write \"**/*.{js,ts,json}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
