--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.2",
+    "stripe": "^17.6.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
